--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 
 <body>
 	<h1>Match the Pictures!</h1>
+	
+	<div class="box-area">
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+		<img src="star1.jpg"/>
+	</div>
+
 
 </body>
 
