--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 		<img src="star1.jpg"/>
 		<img src="star1.jpg"/>
 	</div>
+	
+	<div class="form">
+		<form action="data.php" method="post">
+		<h2 class="feedback-title">We would love your feedback!</h2><br><br>
+		<p>First Name:</p>
+		<input type="text" name="firstname"><br>
+		<p>Last Name:</p>
+		<input type="text" name="lastname"><br><br>
+	</div>
+
 
 
 </body>
