--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 		<input type="text" name="firstname"><br>
 		<p>Last Name:</p>
 		<input type="text" name="lastname"><br><br>
+		<textarea name="text" cols="35" rows="3">Comment Here!</textarea><br>
+		<input type="submit" value="Send, yo!" formtarget="_blank">
+		<input type="reset" value="Start over">
 	</div>
 
 
