--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
 
 <header>
 	<title>Ronin's Match Game</title>
+	<link href="styles.css" type="text/css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 </header>
 
 <body>
+
+<!-- Potential Nav bar here
+	<ul>
+		<li></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ul> -->
+	
 	<h1>Match the Pictures!</h1>
 	
 	<div class="box-area">
