--- a/index.html
+++ b/index.html
@@ -3,52 +3,51 @@
 <html>
 
 <header>
-	<title>Ronin's Match Game</title>
-	<link href="styles.css" type="text/css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
+  <title>Ronin's Match Game</title>
+
+  <link href="css/styles.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 </header>
 
 <body>
 
 <!-- Potential Nav bar here
-	<ul>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul> -->
-	
-	<h1>Match the Pictures!</h1>
-	
-	<div class="box-area">
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-		<img src="star1.jpg"/>
-	</div>
-	
-	<div class="form">
-		<form action="data.php" method="post">
-		<h2 class="feedback-title">We would love your feedback!</h2><br><br>
-		<p>First Name:</p>
-		<input type="text" name="firstname"><br>
-		<p>Last Name:</p>
-		<input type="text" name="lastname"><br><br>
-		<textarea name="text" cols="35" rows="3">Comment Here!</textarea><br>
-		<input type="submit" value="Send, yo!" formtarget="_blank">
-		<input type="reset" value="Start over">
-	</div>
+<ul>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul> -->
 
+<h1>Match the Pictures!</h1>
 
+  <div class="box-area">
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+      <img src="img/star1.jpg"/>
+    </div>
 
+<div class="form">
+  <form action="php/data.php" method="post">
+    <h2 class="feedback-title">We would love your feedback!</h2><br><br>
+    <p>First Name:</p>
+    <input type="text" name="firstname"><br>
+    <p>Last Name:</p>
+    <input type="text" name="lastname"><br><br>
+    <textarea name="text" cols="35" rows="3">Comment Here!</textarea><br>
+    <input type="submit" value="Send, yo!" formtarget="_blank">
+    <input type="reset" value="Start over">
+  </form>
+</div>
 </body>
 
 </html>
