--- a/index.html
+++ b/index.html
@@ -4,47 +4,62 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ronin's Match Game</title>
-  <script type="text/javascript" scr="js.js"></script>
+  <title>Star Gallery</title>
+  <script type="text/javascript" src="js.js"></script>
   <link href="css/styles.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 
+ <!--Bootstrap conflicts with current layout.-->
  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-
+<div class="hidden">
+  <script>
+    <!--//--><![CDATA[//><!--
+      var images = new Array();
+      function preload() {
+        for (i = 0; i < preload.arguments.length; i++) {
+          images[i] = new Array();
+          images[i].src = preload.arguments[i];
+        }
+      }
+      preload (
+        "img/r1.jpg",
+        "img/r2.jpg",
+        "img/r3.jpg",
+        "img/r4.jpg",
+        "img/r5.jpg",
+        "img/r6.jpg",
+        "img/r7.jpg",
+        "img/r8.jpg",
+        "img/r9.jpg",
+        "img/r10.jpg",
+        "img/r11.jpg",
+        "img/r12.jpg"
+      )
+    //--><!]]>
+  </script>
+</div>
 </head>
 
 <body>
 
-  <script>
-    var imageTracker = "s";
-    function switchImg() {
-      var image = document.getElementById('box1');
-      if (imageTracker =="s") {
-        image.src = "img/ronin1.jpg";
-        imageTracker = "r";
-      } else {
-        image.src = "img/star1.jpg";
-        imageTracker = "s";
-      }
-    }
-  </script>
+  <h1>Flip the stars!</h1>
 
-  <h1>Match the Pictures!</h1>
+  <p>Click each photo to reveal some fun Ronin had on his journey to and from the philippines!</p>
 
   <div class="box-area">
-      <a href="#"><img src="img/star1.jpg" alt="star image" id='box1' onclick="switchImg();"/></a>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-      <img src="img/star1.jpg"/>
-    </div>
+      <img src="img/star1.jpg" alt="star image" id='box1' onclick="switchImg();"/>
+      <img src="img/star1.jpg" alt="star image" id='box2' onclick="switchImg2();"/>
+      <img src="img/star1.jpg" alt="star image" id='box3' onclick="switchImg3();"/>
+      <img src="img/star1.jpg" alt="star image" id='box4' onclick="switchImg4();"/>
+      <img src="img/star1.jpg" alt="star image" id='box5' onclick="switchImg5();"/>
+      <img src="img/star1.jpg" alt="star image" id='box6' onclick="switchImg6();"/>
+      <img src="img/star1.jpg" alt="star image" id='box7' onclick="switchImg7();"/>
+      <img src="img/star1.jpg" alt="star image" id='box8' onclick="switchImg8();"/>
+      <img src="img/star1.jpg" alt="star image" id='box9' onclick="switchImg9();"/>
+      <img src="img/star1.jpg" alt="star image" id='box10' onclick="switchImg10();"/>
+      <img src="img/star1.jpg" alt="star image" id='box11' onclick="switchImg11();"/>
+      <img src="img/star1.jpg" alt="star image" id='box12' onclick="switchImg12();"/>
+  </div>
 
 
 <!-- jQuery library -->
