--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link href="css/styles.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 
- <!--Bootstrap conflicts with current layout.-->
+ <!--Bootstrap was added after most of the styling was done. It conflicts with current layout. May attempt to 
+incorporate at a later date. -->
  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <div class="hidden">
   <script>
