--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
 <head>
   <meta charset="utf-8">
   <title>Star Gallery</title>
-  <script type="text/javascript" src="js.js"></script>
+  <script type="text/javascript" src="js/js.js"></script>
   <link href="css/styles.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
 
- <!--Bootstrap was added after most of the styling was done. It conflicts with current layout. May attempt to 
-incorporate at a later date. -->
+ <!--Bootstrap conflicts with current layout.-->
  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <div class="hidden">
   <script>
