Added "Coming Soon"

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <script type="text/javascript" src="js/js.js"></script>
   <link href="css/styles.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Slackey" rel="stylesheet">
- 
-  <!--Bootstrap was added after most of the styling was done. It conflicts with current layout. May attempt to 
+
+  <!--Bootstrap was added after most of the styling was done. It conflicts with current layout. May attempt to
   incorporate at a later date. -->
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 <div class="hidden">
@@ -46,6 +46,9 @@
   <h1>Flip the stars!</h1>
 
   <p>Click each photo to reveal some fun Ronin had on his journey to and from the philippines!</p>
+  <br>
+  <p id="notice">*** Coming soon: Match Game! ***</p>
+
 
   <div class="box-area">
       <img src="img/star1.jpg" alt="star image" id='box1' onclick="switchImg();"/>
