Fixed wording in header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <h1>Flip the stars!</h1>
 
-  <p>Grab each photo to reveal some fun Ronin had on his journey to and from the philippines!</p>
+  <p>Grab each photo to reveal some fun Ronin had on his journey to the philippines!</p>
   <br>
   <p id="notice">*** Coming soon: Match Game! ***</p>
 
