playing around with styles

--- a/index.html
+++ b/index.html
@@ -8,56 +8,62 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section class="memory-game">
-        <div class="memory-card" data-framework="r1">
-            <img class="front-face" src="img/r1.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
+    <div class="wrapper">
+        <div class="intro-content">
+            <h1>hello!</h1>
         </div>
-        <div class="memory-card" data-framework="r1">
-            <img class="front-face" src="img/r1.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r2">
-            <img class="front-face" src="img/r2.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r2">
-            <img class="front-face" src="img/r2.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r3">
-            <img class="front-face" src="img/r3.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r3">
-            <img class="front-face" src="img/r3.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r5">
-            <img class="front-face" src="img/r5.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r5">
-            <img class="front-face" src="img/r5.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r8">
-            <img class="front-face" src="img/r8.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r8">
-            <img class="front-face" src="img/r8.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r11">
-            <img class="front-face" src="img/r11.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-        <div class="memory-card" data-framework="r11">
-            <img class="front-face" src="img/r11.jpg"/>
-            <img class="back-face" src="img/star1.jpg" />
-        </div>
-    </section>
+
+        <section class="memory-game">
+            <div class="memory-card" data-framework="r1">
+                <img class="front-face" src="img/r1.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r1">
+                <img class="front-face" src="img/r1.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r2">
+                <img class="front-face" src="img/r2.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r2">
+                <img class="front-face" src="img/r2.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r3">
+                <img class="front-face" src="img/r3.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r3">
+                <img class="front-face" src="img/r3.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r5">
+                <img class="front-face" src="img/r5.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r5">
+                <img class="front-face" src="img/r5.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r8">
+                <img class="front-face" src="img/r8.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r8">
+                <img class="front-face" src="img/r8.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r11">
+                <img class="front-face" src="img/r11.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+            <div class="memory-card" data-framework="r11">
+                <img class="front-face" src="img/r11.jpg"/>
+                <img class="back-face" src="img/star1.jpg" />
+            </div>
+        </section>
+    </div>
 
     <script src="scripts.js"></script>
 </body>
