added counter and reset on completion

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="wrapper">
         <div class="intro-content">
-            <h1>hello!</h1>
+            <h1>Ronin's Match Game</h1>
+            <p>Wins: <span id="wins"></span></p>
         </div>
 
         <section class="memory-game">
