added a close link to the bottom

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                 <img class="back-face" src="img/star1.jpg" />
             </div>
         </section>
+
+        <p class="me"><a href="JavaScript:window.close()">Bye!</a></p>
     </div>
 
     <audio id="hadouken" src="http://soundfxcenter.com/video-games/street-fighter/8d82b5_Street_Fighter_Hadouken_Sound_Effect.mp3"></audio>
